@@ -1,3 +1,6 @@
+upcoming:
+- The Machine infuser actually works
+
 0.0.3:
 - Update to latest Forge
 
